// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClaimButton matches snapshot for citizen with entitlement 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitFlexBasis": "0%",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitAlignItems": "stretch",
        "WebkitBoxAlign": "stretch",
        "WebkitBoxPack": "center",
        "WebkitJustifyContent": "center",
        "alignItems": "stretch",
        "backgroundColor": "rgba(0,175,255,1.00)",
        "borderBottomColor": "rgba(0,175,255,1.00)",
        "borderBottomLeftRadius": "50px",
        "borderBottomRightRadius": "50px",
        "borderBottomStyle": "solid",
        "borderBottomWidth": "0px",
        "borderLeftColor": "rgba(0,175,255,1.00)",
        "borderLeftStyle": "solid",
        "borderLeftWidth": "0px",
        "borderRightColor": "rgba(0,175,255,1.00)",
        "borderRightStyle": "solid",
        "borderRightWidth": "0px",
        "borderTopColor": "rgba(0,175,255,1.00)",
        "borderTopLeftRadius": "50px",
        "borderTopRightRadius": "50px",
        "borderTopStyle": "solid",
        "borderTopWidth": "0px",
        "boxShadow": "0px 0.75px 1.5px rgba(0,0,0,0.24)",
        "display": "flex",
        "height": "68px",
        "justifyContent": "center",
        "marginBottom": "0px",
        "marginLeft": "0px",
        "marginRight": "0px",
        "marginTop": "0px",
        "minHeight": "44px",
        "minWidth": "auto",
        "msFlexAlign": "stretch",
        "msFlexPack": "center",
        "paddingBottom": "0px",
        "paddingLeft": "0px",
        "paddingRight": "0px",
        "paddingTop": "0px",
      }
    }
  >
    <div
      className="css-cursor-18t94o4 css-view-1dbjc4n"
      data-focusable={true}
      disabled={false}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        Object {
          "borderBottomLeftRadius": "50px",
          "borderBottomRightRadius": "50px",
          "borderTopLeftRadius": "50px",
          "borderTopRightRadius": "50px",
          "cursor": "pointer",
          "msTouchAction": "manipulation",
          "overflowX": "hidden",
          "overflowY": "hidden",
          "position": "relative",
          "touchAction": "manipulation",
        }
      }
      tabIndex="0"
    >
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitAlignItems": "center",
            "WebkitBoxAlign": "center",
            "WebkitBoxDirection": "normal",
            "WebkitBoxOrient": "horizontal",
            "WebkitBoxPack": "center",
            "WebkitFlexDirection": "row",
            "WebkitJustifyContent": "center",
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
            "letterSpacing": "0px",
            "msFlexAlign": "center",
            "msFlexDirection": "row",
            "msFlexPack": "center",
          }
        }
      >
        <div
          className="css-text-901oao css-textOneLine-bfa6kz"
          dir="auto"
          style={
            Object {
              "color": "rgba(255,255,255,1.00)",
              "direction": "ltr",
              "fontFamily": "Roboto-Medium, Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "letterSpacing": "1px",
              "marginBottom": "9px",
              "marginLeft": "8px",
              "marginRight": "8px",
              "marginTop": "9px",
              "textAlign": "center",
            }
          }
        >
          <div
            className="css-view-1dbjc4n"
            style={
              Object {
                "WebkitAlignItems": "center",
                "WebkitBoxAlign": "center",
                "WebkitBoxDirection": "normal",
                "WebkitBoxFlex": 1,
                "WebkitBoxOrient": "horizontal",
                "WebkitFlexBasis": "0%",
                "WebkitFlexDirection": "row",
                "WebkitFlexGrow": 1,
                "WebkitFlexShrink": 1,
                "alignItems": "center",
                "display": "flex",
                "flexBasis": "0%",
                "flexDirection": "row",
                "flexGrow": 1,
                "flexShrink": 1,
                "msFlexAlign": "center",
                "msFlexDirection": "row",
                "msFlexNegative": 1,
                "msFlexPositive": 1,
                "msFlexPreferredSize": "0%",
              }
            }
          >
            <span
              className="css-text-901oao css-textHasAncestor-16my406"
              dir="auto"
              style={
                Object {
                  "color": "rgba(255,255,255,1.00)",
                  "direction": "ltr",
                  "fontFamily": "Roboto",
                  "fontSize": "16px",
                  "fontWeight": "500",
                  "lineHeight": "22px",
                  "textAlign": "center",
                  "textDecoration": "none",
                  "textTransform": "none",
                }
              }
            >
              CLAIM YOUR SHARE - 
            </span>
            <div
              className="css-view-1dbjc4n"
              style={
                Object {
                  "WebkitAlignItems": "baseline",
                  "WebkitBoxAlign": "baseline",
                  "WebkitBoxDirection": "normal",
                  "WebkitBoxOrient": "horizontal",
                  "WebkitFlexDirection": "row",
                  "alignItems": "baseline",
                  "display": "inline",
                  "flexDirection": "row",
                  "lineHeight": "24px",
                  "marginLeft": "4px",
                  "msFlexAlign": "baseline",
                  "msFlexDirection": "row",
                }
              }
            >
              <span
                className="css-text-901oao css-textHasAncestor-16my406"
                dir="auto"
                style={
                  Object {
                    "color": "rgba(255,255,255,1.00)",
                    "direction": "ltr",
                    "fontFamily": "Roboto Slab",
                    "fontSize": "16px",
                    "fontWeight": "500",
                    "lineHeight": "22px",
                    "marginRight": "2px",
                    "textAlign": "right",
                    "textDecoration": "none",
                    "textTransform": "none",
                  }
                }
              >
                1
              </span>
              <span
                className="css-text-901oao css-textHasAncestor-16my406"
                dir="auto"
                style={
                  Object {
                    "color": "rgba(66,69,74,1.00)",
                    "direction": "ltr",
                    "fontFamily": "Roboto",
                    "fontSize": "16px",
                    "fontWeight": "normal",
                    "lineHeight": "22px",
                    "textAlign": "center",
                    "textDecoration": "none",
                    "textTransform": "none",
                  }
                }
              >
                <span
                  className="css-text-901oao css-textHasAncestor-16my406"
                  dir="auto"
                  style={
                    Object {
                      "color": "rgba(255,255,255,1.00)",
                      "direction": "ltr",
                      "fontFamily": "Roboto Slab",
                      "fontSize": "10px",
                      "fontWeight": "500",
                      "lineHeight": "14px",
                      "textAlign": "right",
                      "textDecoration": "none",
                      "textTransform": "none",
                    }
                  }
                >
                  G
                </span>
                <span
                  className="css-text-901oao css-textHasAncestor-16my406"
                  dir="auto"
                  style={
                    Object {
                      "color": "rgba(255,255,255,1.00)",
                      "direction": "ltr",
                      "fontFamily": "Roboto Slab",
                      "fontSize": "9.5px",
                      "fontWeight": "500",
                      "lineHeight": "11.4px",
                      "textAlign": "right",
                      "textDecoration": "none",
                      "textTransform": "none",
                    }
                  }
                >
                  $
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClaimButton matches snapshot for citizen without entitlement 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitFlexBasis": "0%",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitAlignItems": "stretch",
        "WebkitBoxAlign": "stretch",
        "WebkitBoxDirection": "normal",
        "WebkitBoxOrient": "vertical",
        "WebkitBoxPack": "center",
        "WebkitFlexDirection": "column",
        "WebkitJustifyContent": "center",
        "alignItems": "stretch",
        "backgroundColor": "rgba(248,175,64,1.00)",
        "borderBottomColor": "rgba(0,175,255,1.00)",
        "borderBottomLeftRadius": "50px",
        "borderBottomRightRadius": "50px",
        "borderBottomStyle": "solid",
        "borderBottomWidth": "0px",
        "borderLeftColor": "rgba(0,175,255,1.00)",
        "borderLeftStyle": "solid",
        "borderLeftWidth": "0px",
        "borderRightColor": "rgba(0,175,255,1.00)",
        "borderRightStyle": "solid",
        "borderRightWidth": "0px",
        "borderTopColor": "rgba(0,175,255,1.00)",
        "borderTopLeftRadius": "50px",
        "borderTopRightRadius": "50px",
        "borderTopStyle": "solid",
        "borderTopWidth": "0px",
        "display": "flex",
        "flexDirection": "column",
        "height": "68px",
        "justifyContent": "center",
        "marginBottom": "0px",
        "marginLeft": "0px",
        "marginRight": "0px",
        "marginTop": "0px",
        "minHeight": "44px",
        "minWidth": "auto",
        "msFlexAlign": "stretch",
        "msFlexDirection": "column",
        "msFlexPack": "center",
        "paddingBottom": "0px",
        "paddingLeft": "0px",
        "paddingRight": "0px",
        "paddingTop": "0px",
      }
    }
  >
    <div
      aria-disabled={true}
      className="css-view-1dbjc4n"
      disabled={true}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        Object {
          "borderBottomLeftRadius": "50px",
          "borderBottomRightRadius": "50px",
          "borderTopLeftRadius": "50px",
          "borderTopRightRadius": "50px",
          "overflowX": "hidden",
          "overflowY": "hidden",
          "position": "relative",
        }
      }
    >
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitAlignItems": "center",
            "WebkitBoxAlign": "center",
            "WebkitBoxDirection": "normal",
            "WebkitBoxOrient": "horizontal",
            "WebkitBoxPack": "center",
            "WebkitFlexDirection": "row",
            "WebkitJustifyContent": "center",
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
            "letterSpacing": "0px",
            "msFlexAlign": "center",
            "msFlexDirection": "row",
            "msFlexPack": "center",
          }
        }
      >
        <div
          className="css-text-901oao css-textOneLine-bfa6kz"
          dir="auto"
          style={
            Object {
              "color": "rgba(0,0,0,0.32)",
              "direction": "ltr",
              "fontFamily": "Roboto-Medium, Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "letterSpacing": "1px",
              "marginBottom": "9px",
              "marginLeft": "8px",
              "marginRight": "8px",
              "marginTop": "9px",
              "textAlign": "center",
            }
          }
        >
          <div
            className="css-view-1dbjc4n"
            style={
              Object {
                "WebkitAlignItems": "center",
                "WebkitBoxAlign": "center",
                "WebkitBoxDirection": "normal",
                "WebkitBoxFlex": 1,
                "WebkitBoxOrient": "horizontal",
                "WebkitFlexBasis": "0%",
                "WebkitFlexDirection": "row",
                "WebkitFlexGrow": 1,
                "WebkitFlexShrink": 1,
                "alignItems": "center",
                "display": "flex",
                "flexBasis": "0%",
                "flexDirection": "row",
                "flexGrow": 1,
                "flexShrink": 1,
                "msFlexAlign": "center",
                "msFlexDirection": "row",
                "msFlexNegative": 1,
                "msFlexPositive": 1,
                "msFlexPreferredSize": "0%",
              }
            }
          >
            <div
              className="css-view-1dbjc4n"
              style={
                Object {
                  "WebkitBoxDirection": "normal",
                  "WebkitBoxOrient": "vertical",
                  "WebkitFlexDirection": "column",
                  "display": "inline-flex",
                  "flexDirection": "column",
                  "msFlexDirection": "column",
                }
              }
            >
              <span
                className="css-text-901oao css-textHasAncestor-16my406"
                dir="auto"
                style={
                  Object {
                    "color": "rgba(66,69,74,1.00)",
                    "direction": "ltr",
                    "fontFamily": "Roboto",
                    "fontSize": "16px",
                    "fontWeight": "normal",
                    "lineHeight": "22px",
                    "marginBottom": "8px",
                    "textAlign": "center",
                    "textDecoration": "none",
                    "textTransform": "none",
                  }
                }
              >
                Next Daily Income:
              </span>
              <span
                className="css-text-901oao css-textHasAncestor-16my406"
                dir="auto"
                style={
                  Object {
                    "color": "rgba(255,255,255,1.00)",
                    "direction": "ltr",
                    "fontFamily": "Roboto Slab",
                    "fontSize": "36px",
                    "fontWeight": "700",
                    "lineHeight": "30px",
                    "marginTop": "-4px",
                    "textAlign": "center",
                    "textDecoration": "none",
                    "textTransform": "none",
                  }
                }
              >
                00:10:00
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClaimButton matches snapshot for non-citizen 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitFlexBasis": "0%",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitAlignItems": "stretch",
        "WebkitBoxAlign": "stretch",
        "WebkitBoxPack": "center",
        "WebkitJustifyContent": "center",
        "alignItems": "stretch",
        "backgroundColor": "rgba(0,0,0,0.12)",
        "borderBottomColor": "rgba(0,175,255,1.00)",
        "borderBottomLeftRadius": "50px",
        "borderBottomRightRadius": "50px",
        "borderBottomStyle": "solid",
        "borderBottomWidth": "0px",
        "borderLeftColor": "rgba(0,175,255,1.00)",
        "borderLeftStyle": "solid",
        "borderLeftWidth": "0px",
        "borderRightColor": "rgba(0,175,255,1.00)",
        "borderRightStyle": "solid",
        "borderRightWidth": "0px",
        "borderTopColor": "rgba(0,175,255,1.00)",
        "borderTopLeftRadius": "50px",
        "borderTopRightRadius": "50px",
        "borderTopStyle": "solid",
        "borderTopWidth": "0px",
        "display": "flex",
        "justifyContent": "center",
        "marginBottom": "0px",
        "marginLeft": "0px",
        "marginRight": "0px",
        "marginTop": "0px",
        "minHeight": "44px",
        "minWidth": "auto",
        "msFlexAlign": "stretch",
        "msFlexPack": "center",
        "paddingBottom": "0px",
        "paddingLeft": "0px",
        "paddingRight": "0px",
        "paddingTop": "0px",
      }
    }
  >
    <div
      aria-disabled={true}
      className="css-view-1dbjc4n"
      disabled={true}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        Object {
          "borderBottomLeftRadius": "50px",
          "borderBottomRightRadius": "50px",
          "borderTopLeftRadius": "50px",
          "borderTopRightRadius": "50px",
          "overflowX": "hidden",
          "overflowY": "hidden",
          "position": "relative",
        }
      }
    >
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitAlignItems": "center",
            "WebkitBoxAlign": "center",
            "WebkitBoxDirection": "normal",
            "WebkitBoxOrient": "horizontal",
            "WebkitBoxPack": "center",
            "WebkitFlexDirection": "row",
            "WebkitJustifyContent": "center",
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
            "letterSpacing": "0px",
            "msFlexAlign": "center",
            "msFlexDirection": "row",
            "msFlexPack": "center",
          }
        }
      >
        <div
          className="css-text-901oao css-textOneLine-bfa6kz"
          dir="auto"
          style={
            Object {
              "color": "rgba(0,0,0,0.32)",
              "direction": "ltr",
              "fontFamily": "Roboto-Medium, Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "letterSpacing": "1px",
              "marginBottom": "9px",
              "marginLeft": "8px",
              "marginRight": "8px",
              "marginTop": "9px",
              "textAlign": "center",
            }
          }
        >
          <div
            className="css-view-1dbjc4n"
            style={
              Object {
                "WebkitAlignItems": "center",
                "WebkitBoxAlign": "center",
                "WebkitBoxDirection": "normal",
                "WebkitBoxFlex": 1,
                "WebkitBoxOrient": "horizontal",
                "WebkitFlexBasis": "0%",
                "WebkitFlexDirection": "row",
                "WebkitFlexGrow": 1,
                "WebkitFlexShrink": 1,
                "alignItems": "center",
                "display": "flex",
                "flexBasis": "0%",
                "flexDirection": "row",
                "flexGrow": 1,
                "flexShrink": 1,
                "msFlexAlign": "center",
                "msFlexDirection": "row",
                "msFlexNegative": 1,
                "msFlexPositive": 1,
                "msFlexPreferredSize": "0%",
              }
            }
          >
            <span
              className="css-text-901oao css-textHasAncestor-16my406"
              dir="auto"
              style={
                Object {
                  "color": "rgba(255,255,255,1.00)",
                  "direction": "ltr",
                  "fontFamily": "Roboto",
                  "fontSize": "16px",
                  "fontWeight": "500",
                  "lineHeight": "22px",
                  "textAlign": "center",
                  "textDecoration": "none",
                  "textTransform": "none",
                }
              }
            >
              CLAIM YOUR SHARE - 
            </span>
            <div
              className="css-view-1dbjc4n"
              style={
                Object {
                  "WebkitAlignItems": "baseline",
                  "WebkitBoxAlign": "baseline",
                  "WebkitBoxDirection": "normal",
                  "WebkitBoxOrient": "horizontal",
                  "WebkitFlexDirection": "row",
                  "alignItems": "baseline",
                  "display": "inline",
                  "flexDirection": "row",
                  "lineHeight": "24px",
                  "marginLeft": "4px",
                  "msFlexAlign": "baseline",
                  "msFlexDirection": "row",
                }
              }
            >
              <span
                className="css-text-901oao css-textHasAncestor-16my406"
                dir="auto"
                style={
                  Object {
                    "color": "rgba(255,255,255,1.00)",
                    "direction": "ltr",
                    "fontFamily": "Roboto Slab",
                    "fontSize": "16px",
                    "fontWeight": "500",
                    "lineHeight": "22px",
                    "marginRight": "2px",
                    "textAlign": "right",
                    "textDecoration": "none",
                    "textTransform": "none",
                  }
                }
              >
                0
              </span>
              <span
                className="css-text-901oao css-textHasAncestor-16my406"
                dir="auto"
                style={
                  Object {
                    "color": "rgba(66,69,74,1.00)",
                    "direction": "ltr",
                    "fontFamily": "Roboto",
                    "fontSize": "16px",
                    "fontWeight": "normal",
                    "lineHeight": "22px",
                    "textAlign": "center",
                    "textDecoration": "none",
                    "textTransform": "none",
                  }
                }
              >
                <span
                  className="css-text-901oao css-textHasAncestor-16my406"
                  dir="auto"
                  style={
                    Object {
                      "color": "rgba(255,255,255,1.00)",
                      "direction": "ltr",
                      "fontFamily": "Roboto Slab",
                      "fontSize": "10px",
                      "fontWeight": "500",
                      "lineHeight": "14px",
                      "textAlign": "right",
                      "textDecoration": "none",
                      "textTransform": "none",
                    }
                  }
                >
                  G
                </span>
                <span
                  className="css-text-901oao css-textHasAncestor-16my406"
                  dir="auto"
                  style={
                    Object {
                      "color": "rgba(255,255,255,1.00)",
                      "direction": "ltr",
                      "fontFamily": "Roboto Slab",
                      "fontSize": "9.5px",
                      "fontWeight": "500",
                      "lineHeight": "11.4px",
                      "textAlign": "right",
                      "textDecoration": "none",
                      "textTransform": "none",
                    }
                  }
                >
                  $
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
